--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 13.0,
-"selection": false,
+"row": 55,
+"scroll_position": 34.0,
+"selection": true,
+"selection_from_column": 25,
+"selection_from_line": 55,
+"selection_to_column": 26,
+"selection_to_line": 55,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 16.0,
+"row": 56,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,7 +151,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 0.0,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -255,12 +259,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 74,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 8.0,
-"selection": false,
+"row": 22,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 22,
+"selection_to_column": 6,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
@@ -311,10 +319,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
