--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,8 +37,8 @@ selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://resources/upgrades/ability.gd", "res://resources/upgrades/ability_upgrade.gd", "res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/health_component.gd", "res://scenes/main/main.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd"]
-selected_script="res://scenes/game_objects/basic_enemy/basic_enemy.gd"
+open_scripts=["res://resources/upgrades/ability.gd", "res://resources/upgrades/ability_upgrade.gd", "res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/health_component.gd", "res://scenes/main/main.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd"]
+selected_script="res://scenes/component/death_component.gd"
 open_help=[]
 script_split_offset=306
 list_split_offset=0
