--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,25 +20,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_objects/basic_enemy/basic_enemy.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/manager/", "res://scenes/main/", "res://scenes/game_objects/", "res://scenes/game_objects/player/", "res://scenes/game_objects/basic_enemy/", "res://scenes/ability/", "res://scenes/ability/sword_ability/", "res://scenes/ability/axe_ability_controller/", "res://scenes/ability/axe_ability/", "res://resources/", "res://resources/upgrades/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/ability/sword_ability/sword_ability.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/ability/", "res://scenes/ability/sword_ability_controller/", "res://scenes/ability/sword_ability/", "res://resources/", "res://resources/upgrades/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/ability/axe_ability_controller/axe_ability_controller.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/ability/axe_ability/axe_ability.tscn", "res://scenes/main/main.tscn", "res://scenes/component/death_component.tscn")
-current_scene="res://scenes/component/death_component.tscn"
+open_scenes=PackedStringArray("res://scenes/ability/axe_ability_controller/axe_ability_controller.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/ability/axe_ability/axe_ability.tscn", "res://scenes/main/main.tscn", "res://scenes/component/death_component.tscn", "res://scenes/game_objects/wizard_enemy/wizard_enemy.tscn", "res://scenes/component/velocity_component.tscn", "res://scenes/manager/enemy_manager.tscn", "res://scenes/auto_load/game_events.tscn", "res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn", "res://scenes/component/health_component.tscn", "res://scenes/ability/sword_ability/sword_ability.tscn")
+current_scene="res://scenes/ability/sword_ability/sword_ability.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://resources/upgrades/ability.gd", "res://resources/upgrades/ability_upgrade.gd", "res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/health_component.gd", "res://scenes/main/main.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd"]
-selected_script="res://scenes/component/death_component.gd"
+open_scripts=["res://resources/upgrades/ability.gd", "res://resources/upgrades/ability_upgrade.gd", "res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/component/death_component.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/component/velocity_component.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
+selected_script="res://scenes/component/hitbox_component.gd"
 open_help=[]
 script_split_offset=306
 list_split_offset=0
