--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 72,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 32.0,
+"row": 53,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -385,12 +385,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 4.0,
-"selection": false,
+"row": 27,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 27,
+"selection_to_column": 15,
+"selection_to_line": 27,
 "syntax_highlighter": "GDScript"
 }
 
@@ -399,10 +403,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
